update tablet view

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -6,7 +6,7 @@
     grid-template-columns: var(--grid-container);
     color: var(--color-light);
 
-    @include responsive.breakpoint(mobile){
+    @include responsive.breakpoint(tablet){
         display: none;
     }
 
